--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
 @charset "UTF-8";
+
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+}
